--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4tD4eJmrQvsj3JuM8dznb",
+      "authorship_tag": "ABX9TyPrpmEDRMFgF+tQYhdgAj/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,9 +150,231 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#unique characters in text\n",
+        "chars = sorted(list(set(text)))\n",
+        "vocab_size = len(chars)\n",
+        "print(''.join(chars))\n",
+        "print(vocab_size)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sn96i0TmMp0U",
+        "outputId": "9f9322eb-a3c9-48b3-e1c0-e920e1777878"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " !$&',-.3:;?ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\n",
+            "65\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#tokenize (chars to numbers)\n",
+        "stoi = {ch:i for i,ch in enumerate(chars)}\n",
+        "itos = {i:ch for i,ch in enumerate(chars)}\n",
+        "encode = lambda s: [stoi[c] for c in s] #take string and create list from index in stoi set\n",
+        "decode = lambda l: ''.join([itos[i]for i in l]) #take list of numbers and join chars from itos set to string\n",
+        "\n",
+        "print(encode('Hallo du'))\n",
+        "print(decode(encode('Hallo du')))"
+      ],
+      "metadata": {
+        "id": "FX7WZssoOW2b",
+        "outputId": "12d18415-3a4c-4cf5-f52d-44ac946d1d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[20, 39, 50, 50, 53, 1, 42, 59]\n",
+            "Hallo du\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#encode text, save to troch.Tensor\n",
+        "import torch\n",
+        "data = torch.tensor(encode(text), dtype=torch.long)\n",
+        "print(data.shape, data.dtype)\n",
+        "print(data[:100])\n"
+      ],
+      "metadata": {
+        "id": "CM39-IfYPsBT",
+        "outputId": "05287e7f-0c28-455a-c116-e54b896684dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([1115394]) torch.int64\n",
+            "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58, 47, 64, 43, 52, 10,  0, 14, 43, 44,\n",
+            "        53, 56, 43,  1, 61, 43,  1, 54, 56, 53, 41, 43, 43, 42,  1, 39, 52, 63,\n",
+            "         1, 44, 59, 56, 58, 46, 43, 56,  6,  1, 46, 43, 39, 56,  1, 51, 43,  1,\n",
+            "        57, 54, 43, 39, 49,  8,  0,  0, 13, 50, 50, 10,  0, 31, 54, 43, 39, 49,\n",
+            "         6,  1, 57, 54, 43, 39, 49,  8,  0,  0, 18, 47, 56, 57, 58,  1, 15, 47,\n",
+            "        58, 47, 64, 43, 52, 10,  0, 37, 53, 59])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#train and validation set\n",
+        "n = int(0.9*len(data))\n",
+        "train_data = data[:n]\n",
+        "val_data = data[n:]"
+      ],
+      "metadata": {
+        "id": "iv_X8qm-RAeA"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "block_size = 8\n",
+        "train_data[:block_size+1]"
+      ],
+      "metadata": {
+        "id": "OMhJrRphRxmZ",
+        "outputId": "2107e2f2-6abe-43ad-9936-568aaa145799",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = train_data[:block_size]\n",
+        "y = train_data[1:block_size+1]\n",
+        "for t in range(block_size):\n",
+        "  context = x[:t+1]\n",
+        "  target = y[t]\n",
+        "  print(f\"when input is {context} the target is: {target}\")"
+      ],
+      "metadata": {
+        "id": "8Idu8j-SR3L_",
+        "outputId": "6e3f7e21-b1bf-415d-ca3d-23dbcaffc6f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "when input is tensor([18]) the target is: 47\n",
+            "when input is tensor([18, 47]) the target is: 56\n",
+            "when input is tensor([18, 47, 56]) the target is: 57\n",
+            "when input is tensor([18, 47, 56, 57]) the target is: 58\n",
+            "when input is tensor([18, 47, 56, 57, 58]) the target is: 1\n",
+            "when input is tensor([18, 47, 56, 57, 58,  1]) the target is: 15\n",
+            "when input is tensor([18, 47, 56, 57, 58,  1, 15]) the target is: 47\n",
+            "when input is tensor([18, 47, 56, 57, 58,  1, 15, 47]) the target is: 58\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create random selected 8 char list (context) and their respective 8 char set offset by one (targets)\n",
+        "# 4 pieces each (batch_size)\n",
+        "torch.manual_seed(1337)\n",
+        "batch_size = 4 # no fo independendent sequences processed parallel\n",
+        "block_size = 8 # max length of context for prediction\n",
+        "\n",
+        "def get_batch(split):\n",
+        "  data = train_data if split =='train' else val_data\n",
+        "  ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+        "  x = torch.stack([data[i:i+block_size] for i in ix])\n",
+        "  y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+        "  return x,y\n",
+        "\n",
+        "xb,yb = get_batch('train')\n",
+        "print('inputs:')\n",
+        "print(xb.shape)\n",
+        "print(xb)\n",
+        "print('targets:')\n",
+        "print(yb.shape)\n",
+        "print(yb)"
+      ],
+      "metadata": {
+        "id": "5VdD602-S0H3",
+        "outputId": "c29dc09f-61f6-4de1-de31-8a24180c432a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "inputs:\n",
+            "torch.Size([4, 8])\n",
+            "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+            "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+            "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+            "        [25, 17, 27, 10,  0, 21,  1, 54]])\n",
+            "targets:\n",
+            "torch.Size([4, 8])\n",
+            "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
+            "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
+            "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
+            "        [17, 27, 10,  0, 21,  1, 54, 39]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sn96i0TmMp0U"
+        "id": "jsgXho2UaKeB"
       },
       "execution_count": null,
       "outputs": []
