--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrpmEDRMFgF+tQYhdgAj/B",
+      "authorship_tag": "ABX9TyP4YsBUO7hTnYFC3V1wcj+p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "FzTF1mf5Kox4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "60c1d683-0cb9-463f-c4f8-3e18a756317d"
+        "outputId": "6af199f0-11c6-4643-f87d-84fea1607b44"
       },
       "outputs": [
         {
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CSmhTOY5MTFV",
-        "outputId": "66355fc4-3613-4757-a46b-d45944aed05a"
+        "outputId": "c2f7fde6-e8fa-4870-a103-d8c257fda7a8"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y5KjYc1BMazM",
-        "outputId": "98a78eaf-7503-41a3-9f9d-4c9d5941680e"
+        "outputId": "5cafbcf2-5f5a-4bd8-d42b-1a7d2585409b"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sn96i0TmMp0U",
-        "outputId": "9f9322eb-a3c9-48b3-e1c0-e920e1777878"
+        "outputId": "bb5b307f-04a4-498e-a723-660112c25611"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,12 +191,12 @@
       ],
       "metadata": {
         "id": "FX7WZssoOW2b",
-        "outputId": "12d18415-3a4c-4cf5-f52d-44ac946d1d99",
+        "outputId": "6e8a6c52-5428-46d8-fa6b-44b35e7291ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,12 +219,12 @@
       ],
       "metadata": {
         "id": "CM39-IfYPsBT",
-        "outputId": "05287e7f-0c28-455a-c116-e54b896684dc",
+        "outputId": "0dcdc048-2340-4fc3-c63e-2f64aeb81105",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "iv_X8qm-RAeA"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -263,12 +263,12 @@
       ],
       "metadata": {
         "id": "OMhJrRphRxmZ",
-        "outputId": "2107e2f2-6abe-43ad-9936-568aaa145799",
+        "outputId": "a3ab452a-0471-46cc-8a2a-b2f8d73d1dcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 14
         }
       ]
     },
@@ -294,12 +294,12 @@
       ],
       "metadata": {
         "id": "8Idu8j-SR3L_",
-        "outputId": "6e3f7e21-b1bf-415d-ca3d-23dbcaffc6f2",
+        "outputId": "116aeed1-8113-4fd8-f50e-daf82df3a2ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,16 +339,24 @@
         "print(xb)\n",
         "print('targets:')\n",
         "print(yb.shape)\n",
-        "print(yb)"
+        "print(yb)\n",
+        "\n",
+        "print('--------------------------------------')\n",
+        "\n",
+        "for b in range (batch_size):\n",
+        "  for t in range(block_size):\n",
+        "    context = xb[b, :t+1]\n",
+        "    target = yb[b,t]\n",
+        "    print(f\"when input is {context} the target is: {target}\")"
       ],
       "metadata": {
         "id": "5VdD602-S0H3",
-        "outputId": "c29dc09f-61f6-4de1-de31-8a24180c432a",
+        "outputId": "a5b05d52-136a-4891-ee6c-ea7c83cd5ae0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +373,120 @@
             "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
             "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
             "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
-            "        [17, 27, 10,  0, 21,  1, 54, 39]])\n"
+            "        [17, 27, 10,  0, 21,  1, 54, 39]])\n",
+            "--------------------------------------\n",
+            "when input is tensor([24]) the target is: 43\n",
+            "when input is tensor([24, 43]) the target is: 58\n",
+            "when input is tensor([24, 43, 58]) the target is: 5\n",
+            "when input is tensor([24, 43, 58,  5]) the target is: 57\n",
+            "when input is tensor([24, 43, 58,  5, 57]) the target is: 1\n",
+            "when input is tensor([24, 43, 58,  5, 57,  1]) the target is: 46\n",
+            "when input is tensor([24, 43, 58,  5, 57,  1, 46]) the target is: 43\n",
+            "when input is tensor([24, 43, 58,  5, 57,  1, 46, 43]) the target is: 39\n",
+            "when input is tensor([44]) the target is: 53\n",
+            "when input is tensor([44, 53]) the target is: 56\n",
+            "when input is tensor([44, 53, 56]) the target is: 1\n",
+            "when input is tensor([44, 53, 56,  1]) the target is: 58\n",
+            "when input is tensor([44, 53, 56,  1, 58]) the target is: 46\n",
+            "when input is tensor([44, 53, 56,  1, 58, 46]) the target is: 39\n",
+            "when input is tensor([44, 53, 56,  1, 58, 46, 39]) the target is: 58\n",
+            "when input is tensor([44, 53, 56,  1, 58, 46, 39, 58]) the target is: 1\n",
+            "when input is tensor([52]) the target is: 58\n",
+            "when input is tensor([52, 58]) the target is: 1\n",
+            "when input is tensor([52, 58,  1]) the target is: 58\n",
+            "when input is tensor([52, 58,  1, 58]) the target is: 46\n",
+            "when input is tensor([52, 58,  1, 58, 46]) the target is: 39\n",
+            "when input is tensor([52, 58,  1, 58, 46, 39]) the target is: 58\n",
+            "when input is tensor([52, 58,  1, 58, 46, 39, 58]) the target is: 1\n",
+            "when input is tensor([52, 58,  1, 58, 46, 39, 58,  1]) the target is: 46\n",
+            "when input is tensor([25]) the target is: 17\n",
+            "when input is tensor([25, 17]) the target is: 27\n",
+            "when input is tensor([25, 17, 27]) the target is: 10\n",
+            "when input is tensor([25, 17, 27, 10]) the target is: 0\n",
+            "when input is tensor([25, 17, 27, 10,  0]) the target is: 21\n",
+            "when input is tensor([25, 17, 27, 10,  0, 21]) the target is: 1\n",
+            "when input is tensor([25, 17, 27, 10,  0, 21,  1]) the target is: 54\n",
+            "when input is tensor([25, 17, 27, 10,  0, 21,  1, 54]) the target is: 39\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"input: \\n {xb}\")"
+      ],
+      "metadata": {
+        "id": "jsgXho2UaKeB",
+        "outputId": "bada4c54-9c5a-4a41-93ec-6e9e8bebf951",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input: \n",
+            " tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+            "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+            "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+            "        [25, 17, 27, 10,  0, 21,  1, 54]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bigramm Language Model\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.nn import functional as F\n",
+        "torch.manual_seed(1337)\n",
+        "\n",
+        "class BigramLanguageModel(nn.Module):\n",
+        "\n",
+        "  def __init__(self, vocab_size):\n",
+        "    super().__init__()\n",
+        "    #each token directly reads off the logits for the next token from a lookup table\n",
+        "    self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+        "\n",
+        "  def forward(self, idx, targets):\n",
+        "\n",
+        "    #idx and targets are bot (B,T) tensor of integers\n",
+        "    logits = self.token_embedding_table(idx) #(Batch,Time,Channel)\n",
+        "\n",
+        "    B,T,C = logits.shape\n",
+        "    logits = logits.view(B*T,C)\n",
+        "    targets = targets.view(B*T)\n",
+        "    loss2 = F.cross_entropy(logits, targets)\n",
+        "\n",
+        "    return logits, loss\n",
+        "\n",
+        "n = BigramLanguageModel(vocab_size)\n",
+        "logits, loss = n(xb,yb)\n",
+        "print(logits.shape)\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "id": "V5hgW5KE74FL",
+        "outputId": "0615ebf4-bc66-4fd9-b288-7a60c1c8117f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 147
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-873b426d4c48>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    targets  targets.view(B*T)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -374,7 +495,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jsgXho2UaKeB"
+        "id": "wm1ISw2Q9rZw"
       },
       "execution_count": null,
       "outputs": []
