--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4YsBUO7hTnYFC3V1wcj+p",
+      "authorship_tag": "ABX9TyO1s7twE0Qn3/sby01R33ZS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -418,10 +418,10 @@
       ],
       "metadata": {
         "id": "jsgXho2UaKeB",
-        "outputId": "bada4c54-9c5a-4a41-93ec-6e9e8bebf951",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bada4c54-9c5a-4a41-93ec-6e9e8bebf951"
       },
       "execution_count": 22,
       "outputs": [
@@ -464,7 +464,11 @@
         "    targets = targets.view(B*T)\n",
         "    loss2 = F.cross_entropy(logits, targets)\n",
         "\n",
-        "    return logits, loss\n",
+        "    return logits, loss2\n",
+        "\n",
+        "  def generate(self, idx, max_new_tokens):\n",
+        "    #\n",
+        "\n",
         "\n",
         "n = BigramLanguageModel(vocab_size)\n",
         "logits, loss = n(xb,yb)\n",
@@ -472,21 +476,20 @@
         "print(loss)"
       ],
       "metadata": {
-        "id": "V5hgW5KE74FL",
-        "outputId": "0615ebf4-bc66-4fd9-b288-7a60c1c8117f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 147
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V5hgW5KE74FL",
+        "outputId": "e5b4dc65-eeb9-498f-c33c-148392ec91fa"
       },
-      "execution_count": 28,
+      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-873b426d4c48>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    targets  targets.view(B*T)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([32, 65])\n",
+            "tensor(4.8786, grad_fn=<NllLossBackward0>)\n"
           ]
         }
       ]
