--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1s7twE0Qn3/sby01R33ZS",
+      "authorship_tag": "ABX9TyPBWWCP6sO9tQfQsnGzV26P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {
         "id": "FzTF1mf5Kox4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6af199f0-11c6-4643-f87d-84fea1607b44"
+        "outputId": "5ab16c9f-e3b2-4983-85f2-5d3de229e032"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "n7buXP7nL233"
       },
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CSmhTOY5MTFV",
-        "outputId": "c2f7fde6-e8fa-4870-a103-d8c257fda7a8"
+        "outputId": "09092a37-294b-4448-c963-c7b075901fcd"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y5KjYc1BMazM",
-        "outputId": "5cafbcf2-5f5a-4bd8-d42b-1a7d2585409b"
+        "outputId": "a62350b8-4ca5-49af-f2b6-b1bf83abe411"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sn96i0TmMp0U",
-        "outputId": "bb5b307f-04a4-498e-a723-660112c25611"
+        "outputId": "29fab1de-7690-4f5c-a81e-dd30cbade33d"
       },
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,12 +191,12 @@
       ],
       "metadata": {
         "id": "FX7WZssoOW2b",
-        "outputId": "6e8a6c52-5428-46d8-fa6b-44b35e7291ed",
+        "outputId": "09e062e9-3fe5-4cea-d4aa-49f80f3acc76",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,12 +219,12 @@
       ],
       "metadata": {
         "id": "CM39-IfYPsBT",
-        "outputId": "0dcdc048-2340-4fc3-c63e-2f64aeb81105",
+        "outputId": "31e2d2c9-e655-4b0b-8303-833bbc500c1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "iv_X8qm-RAeA"
       },
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -263,12 +263,12 @@
       ],
       "metadata": {
         "id": "OMhJrRphRxmZ",
-        "outputId": "a3ab452a-0471-46cc-8a2a-b2f8d73d1dcd",
+        "outputId": "a5cf7b14-be24-4b03-8e78-31ed01d9375f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 22
         }
       ]
     },
@@ -294,12 +294,12 @@
       ],
       "metadata": {
         "id": "8Idu8j-SR3L_",
-        "outputId": "116aeed1-8113-4fd8-f50e-daf82df3a2ca",
+        "outputId": "7f3c2156-5f65-4c46-d0a3-62ded653aa6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,12 +351,12 @@
       ],
       "metadata": {
         "id": "5VdD602-S0H3",
-        "outputId": "a5b05d52-136a-4891-ee6c-ea7c83cd5ae0",
+        "outputId": "a12ad49e-eac1-4db8-cb11-e50cea727c54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,9 +421,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bada4c54-9c5a-4a41-93ec-6e9e8bebf951"
+        "outputId": "2184577c-74e4-4339-ecc0-b005f98acc2d"
       },
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,42 +454,67 @@
         "    #each token directly reads off the logits for the next token from a lookup table\n",
         "    self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
         "\n",
-        "  def forward(self, idx, targets):\n",
+        "  def forward(self, idx, targets=None):\n",
         "\n",
         "    #idx and targets are bot (B,T) tensor of integers\n",
         "    logits = self.token_embedding_table(idx) #(Batch,Time,Channel)\n",
         "\n",
-        "    B,T,C = logits.shape\n",
-        "    logits = logits.view(B*T,C)\n",
-        "    targets = targets.view(B*T)\n",
-        "    loss2 = F.cross_entropy(logits, targets)\n",
+        "    if targets is None:\n",
+        "      loss = None\n",
+        "    else:\n",
+        "      B,T,C = logits.shape\n",
+        "      logits = logits.view(B*T,C)\n",
+        "      targets = targets.view(B*T)\n",
+        "      loss2 = F.cross_entropy(logits, targets)\n",
         "\n",
         "    return logits, loss2\n",
         "\n",
         "  def generate(self, idx, max_new_tokens):\n",
-        "    #\n",
+        "    #idx is (Batch, Time) array of indices in the current context\n",
+        "    for _ in range(max_new_tokens):\n",
+        "      #get the predictions\n",
+        "      logits, loss = self(idx)\n",
+        "      #only last time stamp\n",
+        "      logits = logits[:,-1,:] #becomse (Batch, Channel)\n",
+        "      #apply softmax to get the probabilities\n",
+        "      probs = F.softmax(logits, dim=1) #(Bacth, Channel)\n",
+        "      #sample from the distribution\n",
+        "      idx_next = torch.multinomial(probs, num_samples=1) # (Batch,1)\n",
+        "      #append sampled index to the running sequence\n",
+        "      idx = torch.cat((idx, idx_next), dim=1) #(Batch, Time+1)\n",
+        "\n",
+        "      return idx\n",
         "\n",
         "\n",
-        "n = BigramLanguageModel(vocab_size)\n",
-        "logits, loss = n(xb,yb)\n",
+        "m = BigramLanguageModel(vocab_size)\n",
+        "logits, loss = m(xb,yb)\n",
         "print(logits.shape)\n",
-        "print(loss)"
+        "print(loss)\n",
+        "print(logits)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V5hgW5KE74FL",
-        "outputId": "e5b4dc65-eeb9-498f-c33c-148392ec91fa"
+        "outputId": "71712a46-9fba-4ba8-f4ed-866f48958dc9"
       },
-      "execution_count": 30,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "torch.Size([32, 65])\n",
-            "tensor(4.8786, grad_fn=<NllLossBackward0>)\n"
+            "tensor(4.8786, grad_fn=<NllLossBackward0>)\n",
+            "tensor([[-1.5101, -0.0948,  1.0927,  ..., -0.6126, -0.6597,  0.7624],\n",
+            "        [ 0.3323, -0.0872, -0.7470,  ..., -0.6716, -0.9572, -0.9594],\n",
+            "        [ 0.2475, -0.6349, -1.2909,  ...,  1.3064, -0.2256, -1.8305],\n",
+            "        ...,\n",
+            "        [-2.1910, -0.7574,  1.9656,  ..., -0.3580,  0.8585, -0.6161],\n",
+            "        [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275],\n",
+            "        [-0.6787,  0.8662, -1.6433,  ...,  2.3671, -0.7775, -0.2586]],\n",
+            "       grad_fn=<ViewBackward0>)\n"
           ]
         }
       ]
@@ -500,7 +525,7 @@
       "metadata": {
         "id": "wm1ISw2Q9rZw"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     }
   ]
