--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBWWCP6sO9tQfQsnGzV26P",
+      "authorship_tag": "ABX9TyOoCwukJD1DPAnZeUbcJhBB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -465,9 +465,9 @@
         "      B,T,C = logits.shape\n",
         "      logits = logits.view(B*T,C)\n",
         "      targets = targets.view(B*T)\n",
-        "      loss2 = F.cross_entropy(logits, targets)\n",
+        "      loss = F.cross_entropy(logits, targets)\n",
         "\n",
-        "    return logits, loss2\n",
+        "    return logits, loss\n",
         "\n",
         "  def generate(self, idx, max_new_tokens):\n",
         "    #idx is (Batch, Time) array of indices in the current context\n",
@@ -482,24 +482,27 @@
         "      idx_next = torch.multinomial(probs, num_samples=1) # (Batch,1)\n",
         "      #append sampled index to the running sequence\n",
         "      idx = torch.cat((idx, idx_next), dim=1) #(Batch, Time+1)\n",
-        "\n",
-        "      return idx\n",
+        "      print(f\"max_new_tokens: {max_new_tokens}, iteration: {_}, idx: {idx}\")\n",
+        "    return idx\n",
         "\n",
         "\n",
         "m = BigramLanguageModel(vocab_size)\n",
         "logits, loss = m(xb,yb)\n",
         "print(logits.shape)\n",
         "print(loss)\n",
-        "print(logits)"
+        "print(logits)\n",
+        "\n",
+        "\n",
+        "print(decode(m.generate(idx = torch.zeros((1,1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V5hgW5KE74FL",
-        "outputId": "71712a46-9fba-4ba8-f4ed-866f48958dc9"
+        "outputId": "772b2b84-25bb-4324-a365-81222ca3d6d7"
       },
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +517,10 @@
             "        [-2.1910, -0.7574,  1.9656,  ..., -0.3580,  0.8585, -0.6161],\n",
             "        [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275],\n",
             "        [-0.6787,  0.8662, -1.6433,  ...,  2.3671, -0.7775, -0.2586]],\n",
-            "       grad_fn=<ViewBackward0>)\n"
+            "       grad_fn=<ViewBackward0>)\n",
+            "max_new_tokens: 100, iteration: 0, idx: tensor([[ 0, 31]])\n",
+            "\n",
+            "S\n"
           ]
         }
       ]
