--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoCwukJD1DPAnZeUbcJhBB",
+      "authorship_tag": "ABX9TyMu717eFbx8oekGPYssAfV4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -482,7 +482,7 @@
         "      idx_next = torch.multinomial(probs, num_samples=1) # (Batch,1)\n",
         "      #append sampled index to the running sequence\n",
         "      idx = torch.cat((idx, idx_next), dim=1) #(Batch, Time+1)\n",
-        "      print(f\"max_new_tokens: {max_new_tokens}, iteration: {_}, idx: {idx}\")\n",
+        "\n",
         "    return idx\n",
         "\n",
         "\n",
@@ -500,9 +500,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V5hgW5KE74FL",
-        "outputId": "772b2b84-25bb-4324-a365-81222ca3d6d7"
+        "outputId": "713992f7-1398-41c6-beee-486f1d6de135"
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,20 +518,45 @@
             "        [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275],\n",
             "        [-0.6787,  0.8662, -1.6433,  ...,  2.3671, -0.7775, -0.2586]],\n",
             "       grad_fn=<ViewBackward0>)\n",
-            "max_new_tokens: 100, iteration: 0, idx: tensor([[ 0, 31]])\n",
             "\n",
-            "S\n"
+            "Sr?qP-QWktXoL&jLDJgOLVz'RIoDqHdhsV&vLLxatjscMpwLERSPyao.qfzs$Ys$zF-w,;eEkzxjgCKFChs!iWW.ObzDnxA Ms$3\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#PyTorch Optimizer\n",
+        "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)"
+      ],
       "metadata": {
         "id": "wm1ISw2Q9rZw"
       },
-      "execution_count": 26,
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size=32\n",
+        "for steps in range(100):\n",
+        "\n",
+        "  #sample a batch of data\n",
+        "  xb,yb = get_batch('train')\n",
+        "\n",
+        "  #evaluate the loss\n",
+        "  logits, loss = m(xb,yb)\n",
+        "  optimizer.zero_grad(set_to_none=True)\n",
+        "  loss.backward()\n",
+        "  optimizer.step()\n",
+        "\n",
+        "  print(loss.item())"
+      ],
+      "metadata": {
+        "id": "5jTs9vIq1uBS"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
