--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu717eFbx8oekGPYssAfV4",
+      "authorship_tag": "ABX9TyPFWcoTXepovLYp9xWZei0t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,7 +540,7 @@
       "cell_type": "code",
       "source": [
         "batch_size=32\n",
-        "for steps in range(100):\n",
+        "for steps in range(1000):\n",
         "\n",
         "  #sample a batch of data\n",
         "  xb,yb = get_batch('train')\n",
@@ -551,10 +551,58 @@
         "  loss.backward()\n",
         "  optimizer.step()\n",
         "\n",
-        "  print(loss.item())"
+        "print(loss.item())"
       ],
       "metadata": {
-        "id": "5jTs9vIq1uBS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5jTs9vIq1uBS",
+        "outputId": "b91e5ad2-dc1a-47cc-d923-32b537a564e7"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.4017796516418457\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(decode(m.generate(idx = torch.zeros((1,1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+      ],
+      "metadata": {
+        "id": "Pg_0gnuu2HMP",
+        "outputId": "b71b5fa8-fec6-4934-ab91-67b4007b5fdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "An, ainsheabam.\n",
+            "Th.\n",
+            "AMur Bu thang, begod.\n",
+            "ly meres s me tles intilderte Prm wan, waprorem prvand s c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IIFtcfav2kRk"
       },
       "execution_count": null,
       "outputs": []
